# SIMDOperators

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  simdops.cmake
benchmarks/: intersect_sorted_benchmark.cpp  intersect_sorted_comp.hpp  merge_sorted_benchmark.cpp  merge_sorted_comp.hpp
dbops/datastructure/include/: column.hpp
dbops/operators/include/column_based/: filter.hpp
dbops/operators/src/: CMakeLists.txt  main.cpp
dbops/operators/tests/: CMakeLists.txt
dbops/operators/tests/column_based/raw_data/: CMakeLists.txt  filter_test.cpp
dbops/utils/include/: types.hpp
examples/: CMakeLists.txt
examples/HelloTSL/: HelloTSL.cpp
include/: iterable.hpp
include/algorithms/dbops/: README.md  dbops_hints.hpp  group.hpp  hashing.hpp  hashjoin.hpp  scan.hpp  select.hpp  simdops.hpp
include/algorithms/dbops/arithmetic/: arithmetic.hpp
include/algorithms/dbops/filter/: filter.hpp  filter_hints.hpp
include/algorithms/dbops/group_aggregate/: group_sum.hpp
include/algorithms/dbops/groupby/: groupby.hpp  groupby_hints.hpp  groupby_simd_linear_displacement.hpp
include/algorithms/dbops/groupby/group_aggregate/: group_sum.hpp
include/algorithms/dbops/groupby_aggregate/: group_aggregate.hpp
include/algorithms/dbops/intersection/: intersection.hpp  test.cpp
include/algorithms/dbops/join/: hash_join.hpp  hash_join_hints.hpp  hash_join_simd_linear_probing.hpp  hash_semi_join_simd_linear_probing.hpp  semi_join_simd_linear_probing.hpp
include/algorithms/dbops/materialize/: materialize.hpp
include/algorithms/dbops/scan/: scan.hpp  scan_hints.hpp
include/algorithms/dbops/sort/: sort.hpp  sort_by_clusters.hpp  sort_core.hpp  sort_core_gather.hpp  sort_core_inplace.hpp  sort_direct.hpp  sort_indirect.hpp  sort_indirect_gather.hpp  sort_indirect_gather_cluster_leaf.hpp  sort_indirect_gather_cluster_tail.hpp  sort_indirect_inplace.hpp  sort_indirect_inplace_cluster_leaf.hpp  sort_indirect_inplace_cluster_tail.hpp  sort_indirect_modify_basedata.hpp  sort_utils.hpp
include/algorithms/dbops/union/: union.hpp
include/algorithms/utils/: hashing.hpp  hinting.hpp  math.hpp  sorthints.hpp
include/datastructures/: column.hpp  hashmap.hpp
src/: CMakeLists.txt  SIMDOperators.h
src/SIMDOperators/: SIMDOperators.h
src/SIMDOperators/MorphStore_old/vector/: complex.h
src/SIMDOperators/MorphStore_old/vector/complex/: hash.h
src/SIMDOperators/datastructure/: column.hpp
src/SIMDOperators/datastructures/: column.hpp
src/SIMDOperators/datastructures/hash_based/: hash_binary_key_map.h  hash_map.h  hash_set.h  hash_utils.h
src/SIMDOperators/datastructures/hash_based/strategies/: linear_probing.h
src/SIMDOperators/operators/: MetaOperator.hpp  aggregate.hpp  average.hpp  between.hpp  calc.hpp  calc_unary.hpp  intersect_sorted.hpp  merge_sorted.hpp  merge_sorted_benchmark.cpp  naturalEquiJoin.hpp  project.hpp  projectionPath.hpp  select.hpp
src/SIMDOperators/utils/: AlignmentHelper.hpp  BasicStash.hpp  preprocessor.h  types.hpp
src/SIMDOperators/utils/constexpr/: MemberDetector.h
src/SIMDOperators/wrappers/DAPHNE/: aggregate.hpp  between.hpp  calc.hpp  equiJoin.hpp  intersect.hpp  project.hpp  projectionPath.hpp  select.hpp
src/datastructure/: column.hpp
src/operators/: project.hpp  select.hpp
src/utils/: AlignmentHelper.hpp
srcDEPR/: CMakeLists.txt
srcDEPR/SIMDOperators/: SIMDOperators.h
srcDEPR/SIMDOperators/datastructures/: column.hpp  data_concepts.hpp
srcDEPR/SIMDOperators/operators/: intersect_sorted.hpp
srcDEPR/SIMDOperators/operators/column_based/raw_data/: filter.hpp
srcDEPR/SIMDOperators/utils/: AlignmentHelper.hpp
test/: CMakeLists.txt  aggregateTest.cpp  averageTest.cpp  calc_unaryTest.cpp  intersect_sortedTest.cpp  joinTest.cpp  merge_sortedTest.cpp  operatorTest.cpp  projectTest.cpp  projectionPathTest.cpp  select_test.cpp  simdops_testing.hpp  simpleTest.cpp
test/algorithms/dbops/: arithmetic_add_test.cpp  arithmetic_div_test.cpp  arithmetic_mul_test.cpp  arithmetic_sub_test.cpp  arithmetic_sum_avg_test.cpp  arithmetic_test_1col.cpp  arithmetic_test_2col.cpp  groupby_test.cpp  groupsum_test.cpp  join_test.cpp  select_test.cpp  sort_direct_test.cpp  sort_indirect_test.cpp  sort_with_clusters.cpp
test/benchmark/preprocessing/: CMakeLists.txt  preprocessing.cpp  preprocessing.py
test/benchmark/preprocessing/benchsuite/: CMakeProject.py
test/benchmarks/: calc_unary_benchmark.cpp
test/operators/: calc_test.cpp  select_test.cpp
testDEPR/: aggregateTest.cpp  intersect_sortedTest.cpp  merge_sortedTest.cpp
testDEPR/benchmarks/: help_functions.hpp  merge_sorted_comp.hpp
testDEPR/column_based/: CMakeLists.txt
testDEPR/column_based/raw_data/: CMakeLists.txt
tools/bash/: build.sh  generate.sh
